fix(ffe-form): Fix for extra error padding
Fixes an issue where `InputGroup`s and `RadioButtonInputGroup`s that was using the
render-function to add additional content after the input had the extra margins reserved
for errormessages applies to the wrong element

--- a/packages/ffe-form/less/fieldset.less
+++ b/packages/ffe-form/less/fieldset.less
@@ -10,9 +10,18 @@
     padding: 0;
     margin: 0;
 
-    .ffe-radio-button,
-    .ffe-radio-switch {
+    > *:nth-last-child(1) {
         margin-bottom: 30px;
+    }
+
+    &--error {
+        > *:nth-last-child(1) {
+            margin-bottom: 0;
+        }
+
+        > *:nth-last-child(2) {
+            margin-bottom: 30px;
+        }
     }
 
     .ffe-field-error-message {
@@ -20,29 +29,17 @@
         margin-bottom: 0;
     }
 
-    .ffe-radio-block:last-of-type {
-        margin-bottom: 30px;
-    }
-
     &--no-extra-margin {
+        > *:nth-last-child(1) {
+            margin-bottom: initial;
+        }
+
+        > *:nth-last-child(2) {
+            margin-bottom: initial;
+        }
+
         .ffe-field-error-message {
             margin: 5px 0 10px;
-        }
-
-        .ffe-radio-button {
-            margin: 10px 0;
-
-            &--inline {
-                margin-right: 20px;
-            }
-        }
-
-        .ffe-radio-switch {
-            margin-bottom: 0;
-        }
-
-        .ffe-radio-block:last-of-type {
-            margin-bottom: 0;
         }
     }
 }
